2008-04-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *:
   Initial import of backupcopy plugin.
