@@ -17,7 +17,7 @@ AC_PROG_INTLTOOL
 
 
 # checking for Geany
-PKG_CHECK_MODULES(GEANY, [geany])
+PKG_CHECK_MODULES(GEANY, [geany >= 0.15])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
