@@ -43,6 +43,7 @@
 
 PluginFields	*plugin_fields;
 GeanyData		*geany_data;
+GeanyFunctions	*geany_functions;
 
 
 PLUGIN_VERSION_CHECK(51)
