@@ -1,3 +1,13 @@
+2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/backupcopy.c:
+   Add new GeanyFunctions API.
+ * Makefile.am:
+   Add dist-bzip2 and sign targets.
+ * configure.in:
+   Explicitly depend on Geany >= 0.15.
+
+
 2008-04-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * po/*, src/*, *:
